--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ function checkCss(){
 		 
 	 <script type="text/javascript">
 	 function changeHtml(item, callback){
+		 console.log("im changeHtml() i start the transition calling loadingPages()");
 		 loadingPages();  //start loading
 		 
 		 var currentHtml = document.getElementById("Iframe");
