--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ function loadingPages() {
 	console.log("im loadingPages() i call startLoading") 
 	startLoading();
 	console.log("i set TimeOut and exit")
-	setTimeOut(finsihLoading(),2000);  //1000 ms = 1 s of loading change this value to set loading time
+	setTimeout(finsihLoading(),2000);  //1000 ms = 1 s of loading change this value to set loading time
 	console.log("im loadingPages i go out");
 }
 	 </script>
