--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ var loading_cover = document.getElementById("loading").setAttribute("style", loa
 console.log("im startLoading() i start the laoding");
 }
 function finishLoading() {
-var loading_style ="widht:100%;height:100%";
+var loading_style ="width:0%;height:0%";
 var loading_cover = document.getElementById("loading").setAttribute("style", loading_style);
 console.log("im finishLoading() i finished to load");
 }
