--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
 <script type="text/javascript">
 function startLoading() {	
 var loading_style = "position:absolute;width:100%;height:100%";	
-var loading_cover = document.getElementById("loading").setAttribute("style", loading_style);
+var loading_cover = document.getElementById("loading")
+loading_cover.setAttribute("style", loading_style);
 console.log("im startLoading() i start the laoding");
 }
 function finishLoading() {
 var loading_style ="width:0%;height:0%";
-var loading_cover = document.getElementById("loading").setAttribute("style", loading_style);
+var loading_cover = document.getElementById("loading")
+loading_cover.setAttribute("style", loading_style);
 console.log("im finishLoading() i finished to load");
 }
 function loadingPages() {
