--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 function startLoading() {	
 var loading_style = "position:absolute;width:100%;height:100%";	
 var loading_cover = document.getElementById("loading");
-console.log("the element to be modified is: " + loading_cover + " with style" + loading );  	
+console.log("the element to be modified is: " + loading_cover + " with style" + loading_style );  	
 loading_cover.setAttribute("style", loading_style);
 console.log("im startLoading() i start the laoding");
 }
