--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 function startLoading() {	
 var loading_style = "position:absolute;width:100%;height:100%";	
 var loading_cover = document.getElementById("loading");
-console.log("the element to be modified is: " + loading_cover + " with style" + loading_style );  	
+console.log(loading_cover.attributes);
+	
 loading_cover.setAttribute("style", loading_style);
 console.log("im startLoading() i start the laoding");
 }
@@ -29,6 +30,8 @@ function finishLoading() {
 var loading_style ="width:0%;height:0%";
 var loading_cover = document.getElementById("loading");
 loading_cover.setAttribute("style", loading_style);
+
+console.log(loading_cover.attributes);	
 console.log("im finishLoading() i finished to load");
 }
 function loadingPages() {
