--- a/index.html
+++ b/index.html
@@ -21,25 +21,29 @@
 function startLoading() {	
 var loading_style = "position:absolute;width:100%;height:100%";	
 var loading_cover = document.getElementById("loading");
+console.log("before load set:");
 console.log(loading_cover.attributes);
 	
 loading_cover.setAttribute("style", loading_style);
-console.log("im startLoading() i start the laoding");
+var after_set = document.getElementById("loading");
+console.log("after load set:");
+console.log(after_set.attributes);
 }
 function finishLoading() {
 var loading_style ="width:0%;height:0%";
 var loading_cover = document.getElementById("loading");
-loading_cover.setAttribute("style", loading_style);
-
+console.log(" right before the timer trigger");
 console.log(loading_cover.attributes);	
-console.log("im finishLoading() i finished to load");
+	loading_cover.setAttribute("style", loading_style);
+console.log("after the timer trigger:");
+console.log(loading_cover.attributes);	
 }
+	
 function loadingPages() {
 	console.log("im loadingPages() i call startLoading") 
 	startLoading();
-	console.log("i set TimeOut and exit")
 	setTimeout(finishLoading(),2000);  //1000 ms = 1 s of loading change this value to set loading time
-	console.log("im loadingPages i go out");
+	console.log("im loadingPages i go out, timer message trigger must be after this");
 }
 	 </script>
 	 
