--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 			 'https://tttproject.github.io/docs/thecut/thecut.html',
 			 'https://tttproject.github.io/docs/tls/TimesLiterarySupplement_Final.html',
 			 'https://tttproject.github.io/docs/Eu_directive/eu_directive.html',
-	];	
+	];
+	loadingPages();	
 	var content = document.getElementById("Iframe"); 	
 	if (htmlPages.includes(content.src)) {	
      	        console.log("im change_css iv been called im gonna set css: " + item);
