--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 <img src="https://tttproject.github.io/loading_img/melt-line.gif" style="height:0%;width:0%;position:absolute" id="loading"> 
 <!-- <div id="content">-->
 
-    <iframe src="https://tttproject.github.io/cover/cover.html" width="100%" height="100%" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" >
+    <iframe src="https://tttproject.github.io/cover/cover.html" width="100%" height="100%" id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" style="overflow:hidden" >
     </iframe>
 <!--
   </div>
