--- a/index.html
+++ b/index.html
@@ -275,13 +275,13 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
   </header>
 
 <img src="https://tttproject.github.io/loading_img/melt-line.gif" style="height:0%;width:0%;position:absolute" id="loading"> 
-<!-- <div id="content">-->
+<div id="content" style="overflow:hidden">
 
     <iframe src="https://tttproject.github.io/cover/cover.html" width="100%" height="100%" marginwidth=0 marginheight=0 frameborder=0 id="Iframe" name="targetframe" allowTransparency="true" scrolling="yes" frameborder="0" style="overflow:hidden" >
     </iframe>
-<!--
+
   </div>
--->
+
  <!-- <div class="container" id="dr1">
    <div class="dropdown">
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Pages
