--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 
 	
  </head>
- <body style="">
+ <body style="overflow:hidden">
 
  	<header> 
 <div class="container">
