--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
   <script src="script/1.js"></script> 
 
 <script type="text/javascript">
+
+	function removeFuturElements() {
+		var doc = document.getElementById("Iframe").contentWindow.document.getElementById("vid");
+		doc.remove();
+	}
+	
 function startLoading() {	
 var loading_style = "position:absolute;width:100%;height:100%";	
 var loading_cover = document.getElementById("loading");
@@ -119,6 +125,7 @@ function checkCss(){
 	 function changeHtml(item, callback){
 		 console.log("im changeHtml() i start the transition calling loadingPages()");
 		 loadingPages();  //start loading
+		 removeFuturElements();	//refresh page stuff
 		 
 		 var currentHtml = document.getElementById("Iframe");
 		 
@@ -160,6 +167,7 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 			 'https://tttproject.github.io/docs/Eu_directive/eu_directive.html',
 	];
 	loadingPages();	
+	removeFuturElements();
 	var content = document.getElementById("Iframe"); 	
 	if (htmlPages.includes(content.src)) {	
      	        console.log("im change_css iv been called im gonna set css: " + item);
