--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 		doc.remove();
 		}
 	}
-	
+	 </script>
+<script type=text/javascript">	 
 function startLoading() {	
 var loading_style = "position:absolute;width:100%;height:100%";	
 var loading_cover = document.getElementById("loading");
