--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	 </script>
 <script type=text/javascript">	 
 function startLoading() {	
-var loading_style = "position:absolute;width:100%;height:100%";	
+var loading_style = "position:absolute;width:100%;height:100%;object-fit:cover";	
 var loading_cover = document.getElementById("loading");
 console.log("before load set:");
 console.log(loading_cover.attributes);
