--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -31,18 +31,19 @@
 				<p>Specifically, we took into consideration the following themes:</p>
 
 				<h2>Before 1500</h2>
-				<p>The first style we implemented concerns the graphic design related to a period when the printing press and the printing process itself had not been invented yet. Therefore, the written works of that epoque were decorated by hand by some artists. Those kind of people were called miniaturists. They had the importat task of decorating the first letters of a paragraph, but they also took care of the drawings that enriched the manuscripts. As a matter of fact, after the hard work done by copyists, who copied manually huge amount of text, the miniaturists started their precise and creative work.</p>
+				<p>The first style that we implemented tries to mimic the layout and the "graphic design" belonging to a period when the printing press and the printing process itself had not been invented yet. Therefore, the written works of that epoque were decorated by hand by some artists. Those kind of people were called miniaturists. They had the importat task of decorating the first letters of a paragraph, but they also took care of the drawings that enriched the manuscripts. As a matter of fact, after the hard work done by copyists, who copied manually huge amount of text, the miniaturists started their precise and creative work.</p>
 				<br>
 				<p></p>
 				<p>Back then, decorating the empty spaces between the paragraphs or the images was something very common. Obviously, we are not talking about the well-known <i>horror vacui</i>, but the presence of images enriching the text was something very important though.</p>
 				<br>
-				<p>As regards to the supporting material of the writing, we chose to use a background that looked like the parchment paper that was used around the Middle Ages.</p>
+				<p>As regards the supporting material of the writing, we chose to use a background that looked like the parchment paper that was used around the Middle Ages. Parchment itself was a very expensive writing support, and it could be affoard by very wealthy people only. As a matter of fact, only very important pieces of writing used to be written and conserved.</p>
 				<br>
-				<p>As far as the font-family is concerned, we chose one that could look like a handwritten style, with rounded letters and small decorations.</p>
+				<p>As far as the font-family is concerned, we chose one that could look like a handwritten style, with rounded letters and small decorations. We also tried to emphasize the importance of the first letter of each paragraph, which deserved incredible attention in the past. As a matter of fact, illuminations were real masterpieces and miniaturists could spend months decorating a single letter.</p>
 				<br>
 				<p>While creating this style, we took into consideration all these features, and we tried to mimic as much as we could a style where drawings and good-looking characters were as much important as the proper content of the text.</p>
 				<br><br>
 				<img src="images/style1.png" alt="chart1" class="responsive"/>
+				
 				<h2>XIX Century</h2>
 				<p>In the XIX century, the printing process was constantly developing and making progress thanks to the revolutionary invention of the printing press. As far as the newspapers were concerned, people considered having big titles written in different fonts as something very fancy and attractive. As a matter of fact, the newspapers that date back to the XIX century are usually characterized by such features. Also, something that was very appreciated concerned elaborated decorations in the headers and lines dividing the paragraphs.</p>
 				<br>
