--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="script/1.js"></script> 
-/*
+<!--
 <script type="text/javascript">
 
 	function removeFuturElements() {
@@ -25,7 +25,7 @@
 		doc.remove();
 		}
 	}
-	 </script> */
+	 </script> -->
 <script type=text/javascript">	 
 function startLoading() {	
 var loading_style = "position:absolute;width:100%;height:100%;object-fit:cover";	
@@ -128,7 +128,7 @@ function checkCss(){
 	 function changeHtml(item, callback){
 		 console.log("im changeHtml() i start the transition calling loadingPages()");
 		 loadingPages();  //start loading
-	//	 removeFuturElements();	//refresh page stuff
+	/*	 removeFuturElements();	refresh page stuff */
 		 
 		 var currentHtml = document.getElementById("Iframe");
 		 
@@ -170,7 +170,7 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 			 'https://tttproject.github.io/docs/Eu_directive/eu_directive.html',
 	];
 	loadingPages();	
-	removeFuturElements();
+	/*removeFuturElements();*/
 	var content = document.getElementById("Iframe"); 	
 	if (htmlPages.includes(content.src)) {	
      	        console.log("im change_css iv been called im gonna set css: " + item);
