--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="script/1.js"></script> 
-<!--
+
 <script type="text/javascript">
 
 	function removeFuturElements() {
@@ -25,7 +25,7 @@
 		doc.remove();
 		}
 	}
-	 </script> -->
+	 </script>
 <script type=text/javascript">	 
 function startLoading() {	
 var loading_style = "position:absolute;width:100%;height:100%;object-fit:cover";	
@@ -47,14 +47,15 @@ console.log(loading_cover.attributes);
 console.log("after the timer trigger:");
 console.log(loading_cover.attributes);	
 }
-	
-function loadingPages() {
-	console.log("im loadingPages() i call startLoading") 
+	function loadingPages() {
+	console.log("im loadingPages() i call startLoading");
+							   
 	startLoading();
 	setTimeout(finishLoading,2000);  //1000 ms = 1 s of loading change this value to set loading time
 	console.log("im loadingPages i go out, timer message trigger must be after this");
 }
-	 </script>
+	 
+</script>
 	 
 <script type="text/javascript">
 	// function checks if a css is already loaded returns True or False
@@ -128,7 +129,7 @@ function checkCss(){
 	 function changeHtml(item, callback){
 		 console.log("im changeHtml() i start the transition calling loadingPages()");
 		 loadingPages();  //start loading
-	/*	 removeFuturElements();	refresh page stuff */
+		 removeFuturElements();	//refresh page stuff 
 		 
 		 var currentHtml = document.getElementById("Iframe");
 		 
