--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -45,11 +45,17 @@
 				<img src="images/style1.png" alt="chart1" class="responsive"/>
 				
 				<h2>XIX Century</h2>
-				<p>In the XIX century, the printing process was constantly developing and making progress thanks to the revolutionary invention of the printing press. As far as the newspapers were concerned, people considered having big titles written in different fonts as something very fancy and attractive. As a matter of fact, the newspapers that date back to the XIX century are usually characterized by such features. Also, something that was very appreciated concerned elaborated decorations in the headers and lines dividing the paragraphs.</p>
+				<p>Despite the fact that in this century book production increased enormously,  scientists and men of letters still were publishing their works in the form of manuscript. The rise of the print and publishing industry were still in need of more advertisement.</p>
+				<p>In any case, in the XIX century, the printing process was constantly developing and making progress thanks to the revolutionary invention of the printing press and to the invention of the steam powered press, which dates back to 1812. Indeed, the powered press made it possible to print over a thousand copies of a page per hour.</p>
+				<p>Furthermore, the most recent technological discoverings allowed the creation of a printing press that could print on both sides of a sheet at once, making the printing process extremely faster and making newspapers available to a mass audience (which also helped spread literacy).</p> 
+				<br>
+				<p>The result of this influent change could be seen even in book and printing works' design, with a consequent standardization in titles and other metadata.</p>
+				<br>
+				<p>As far as the newspapers were concerned, people considered having big titles written in different fonts as something very fancy and attractive. As a matter of fact, the newspapers that date back to the XIX century are usually characterized by such features. Also, something that was very appreciated concerned elaborated decorations in the headers and lines dividing the paragraphs.</p>
 				<br>
 				<p>Back then, titles had a huge importance and they used to occupy a relevant section of the page.</p>
 				<br>
-				<p>The colors in the printing had not been introduced yet, therefore all the images were and are in black-and-white.</p>
+				<p>The colors in the printing had not been introduced yet, therefore all the images were and are in black-and-white. If something was colored, it was done manually and after having printed the work.</p>
 				<br>
 				<p>By doing research, we found out something else that got our attention; in the XIX century, ads were already present in the newspapers and they used to advertize popular products that rich people, namely, those who could afford to buy newspapers, would be interested in. Therefore, we decided the add even a small ads advertizing the revolutionary drinking of the chocolate in our style.</p>
 				<br>
