--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -62,7 +62,9 @@
 				<img src="images/style2.png" alt="style2" class="responsive"/>
 				
 				<h2>First half of the XX Century</h2>
-				<p>In order to create this style, we took inspiration from the newspapers that were commonly sold at the beginning of the XX Century. The text was divided into columns where words used to be very close each other, and images seemed not to have the same importance as in the previous centuries. The main aim of this historical period was the clarity, therefore the titles and the fonts were not extremely detailed as formerly, and the biggest concern was related to the easy understandability of the written content.</p>
+				<p>Despite the fact that futurism and dadaism were leading the beginning of the XX Century, the newspapers maintained a very serious and professional layout, even though they were living in an atmosphere of complete change and excitement.</p>
+				<br>
+				<p>In the newspapers that were commonly sold at the beginning of the XX Century, the text was divided into columns where words used to be very close each other, and images did not seem to have the same importance as in the previous centuries. The main aim of the newspapers populating this historical period was the clarity, therefore the titles and the fonts were not extremely detailed as formerly, and the biggest concern was related to the easy understandability of the written content.</p>
 				<br>
 				<p>The font-family that we used here is a very serious and professional one, written in italics and aimed at assisting a fast-reading style. As a matter of fact, writing the news in very narrow columns is a way to help people to read faster, given that the newspaper of this period were not read from the beginning to the end by their readers, who simply wanted to grasp a piece of information here and a piece of information there.</p>
 				<br>
@@ -73,14 +75,14 @@
 				<br>
 				<p>The font that we used for the main corpus of the text looks like a joke. Some letters are in bold, others are not. There is not a common shape and a style which is followed, but we deceided to chose this kind of font because, in our opinion, it was the one which could express in the best way the carefreeness that characterized this historical period.</p>
 				<br>
-				<p>Even the headers and the titles deserved a particular attention: we used big letters with inner decorations in order to get people's attention. Additionaly, we decided to use a colorful background and a structure able to transmit this idea of frenzy and excitement.</p>
+				<p>Even the headers and the titles deserved a particular attention: we used big letters with inner decorations in order to get people's attention. Additionaly, we decided to use an animated and colorful bacgkround in a global structure able to transmit this idea of frenzy and excitement.</p>
 				<br>
 				<img src="images/style4.png" alt="style4" class="responsive"/>
 				
 				<h2></i>Late XX Century (print)</h2>
 				<p>This style is based on magazines belonging to the end of the XX Century. These magazines presented big images and big titles on the main cover page. The titles were always colored with bright and cheerful colours that could get people's attention.</p>
 				<br>
-				<p>Pages used to be of a smooth, polished, shiny white. The font doesn't present aggressive edges, but a rounded way that makes the reader feel in an age without concerns.</p>
+				<p>Pages used to be of a smooth, polished, shiny white. The font-family doesn't present aggressive edges, but a rounded way that makes the reader feel in an age without concerns.</p>
 				<br>
 				<img src="images/style5.png" alt="style5" class="responsive"/>
 
