--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ console.log("Im EXITING FROM RANDOM CHANGE HTML");
 	var imported = document.createElement('script');
 	imported.src = 'js/new.js';
 	content.contentWindow.document.head.appendChild(imported);*/
-	loadingPages();
+	//loadingPages();
 	var content = document.getElementById("Iframe");
 	content.contentWindow.document.getElementById("style").setAttribute("href",item)
 	//	  	var ele = content.contentWindow.document.getElementById("scri").getAttribute("href"); // sec/IF00.html
