--- a/cover/cover.html
+++ b/cover/cover.html
@@ -17,6 +17,7 @@
             </ul>
  <head>
   <link rel="stylesheet" type="text/css" href="coverstyle.css">
+   <title>StyleMe</title>
 </head> 
 <div class="wrapper">
   <br>
