--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -42,8 +42,10 @@
 				<br>
 				<p>While creating this style, we took into consideration all these features, and we tried to mimic as much as we could a style where drawings and good-looking characters were as much important as the proper content of the text.</p>
 				<br><br>
-				<img src="images/style1.png" alt="chart1" class="responsive"/>
-				
+				<img src="images/style1.png" alt="chart1" class="responsive"/> <br>
+				<img src="3f1c5a429f89b11db95dce66ec01cd7c--geoffrey-chaucer-book-layouts.jpg" class="responsive">
+				<img src="images/15th_N_Italian_FirstPage.jpg" alt="chart1" class="responsive"/> <br>
+				<img src="images/the_Canterbury_Tales2.jpg.jpg" alt="chart1" class="responsive"/> <br>
 				<h2>XIX Century</h2>
 				<p>Despite the fact that in this century book production increased enormously,  scientists and men of letters still were publishing their works in the form of manuscript. The rise of the print and publishing industry were still in need of more advertisement.</p>
 				<p>In any case, in the XIX century, the printing process was constantly developing and making progress thanks to the revolutionary invention of the printing press and to the invention of the steam powered press, which dates back to 1812. Indeed, the powered press made it possible to print over a thousand copies of a page per hour.</p>
@@ -76,7 +78,7 @@
 				<p>The font that we used for the main corpus of the text looks like a joke. Some letters are in bold, others are not. There is not a common shape and a style which is followed, but we deceided to chose this kind of font because, in our opinion, it was the one which could express in the best way the carefreeness that characterized this historical period.</p>
 				<br>
 				<p>Even the headers and the titles deserved a particular attention: we used big letters with inner decorations in order to get people's attention. Additionaly, we decided to use an animated and colorful bacgkround in a global structure able to transmit this idea of frenzy and excitement.</p>
-				<br>
+				<br> 
 				<img src="images/style4.png" alt="style4" class="responsive"/>
 				
 				<h2></i>Late XX Century (print)</h2>
@@ -95,4 +97,4 @@
 			</section>
 		</div>
 	</body>
-</html>
+</html> 
