--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -110,11 +110,12 @@
 			<br>
 			<img src="images/style5_main.JPG" alt="style5" class="responsive secondary"/>
 			<br>
-			<commenti>
+			<p>commenti</p>
+			
 			<br>
 			<img src="images/style5_article.jpg" alt="style5" class="responsive secondary"/>
 			<br>
-			<Commenti>
+				<p>commenti</p>
 			<br>
 			<img src="images/style5_article2.JPG" alt="style5" class="responsive secondary"/>
 			<br>
