--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -70,6 +70,7 @@
 				<br>
 				<p>The font-family that we used here is a very serious and professional one, written in italics and aimed at assisting a fast-reading style. As a matter of fact, writing the news in very narrow columns is a way to help people to read faster, given that the newspaper of this period were not read from the beginning to the end by their readers, who simply wanted to grasp a piece of information here and a piece of information there.</p>
 				<br>
+				<div class="style-comment">
 				<p> Commenti </p>
 				<br>
 				<img src="images/style3_main.png" alt="style3" class="responsive secondary"/>
@@ -89,7 +90,7 @@
 				<br>
 				<img src="images/style3_advertising.png" alt="style3" class="responsive secondary"/>
 				<br>
-				
+				</div>
 				<h2>Second half of the XX Century</h2>
 				<p>Differently than the previous decades, the magazines of the XX century were characterized by the invasive presence of colors. We are in the post-war period. The dominating culture was the one that was led and promoted by the hippies. Everything, as a consequence, had to be very colorful and attractive. The main aim was spreading an idea of peace and harmony that was transmitted by using a huge amount of colors and putting them together, even when it appeared to go against every rule concerning the harmonious combination of colors.</p>
 				<br>
@@ -105,6 +106,7 @@
 				<p>Pages used to be of a smooth, polished, shiny white. The font-family doesn't present aggressive edges, but a rounded way that makes the reader feel in an age without concerns.</p>
 				<br>
 				<img src="images/style5.png" alt="style5" class="responsive"/>
+			<div class="style-comment>
 			<br>	
 			<p> Commenti </p>
 			<br>
@@ -119,6 +121,7 @@
 			<br>
 			<img src="images/style5_article2.JPG" alt="style5" class="responsive secondary"/>
 			<br>
+												       </div>									       
 				<h2>2040: the future</h2>
 				<p>We imagined a future we would not like to see. We guessed that people will get bored of reading, and visual content will be the most spread way to communicate news. Therefore, we created a kind of video-reader which will read the text and display the images related to the news. In this way, people of the future will have the opportunity to listen to the news while doing other things.</p>
 				<br>
