--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -106,7 +106,7 @@
 				<p>Pages used to be of a smooth, polished, shiny white. The font-family doesn't present aggressive edges, but a rounded way that makes the reader feel in an age without concerns.</p>
 				<br>
 				<img src="images/style5.png" alt="style5" class="responsive"/>
-			<div class="style-comment>
+			<div class="style-comment">
 			<br>	
 			<p> Commenti </p>
 			<br>
